# skills

./: .gitignore  AUDIT_PLAN.md  README.md  install.sh
audits/2026-07-12/: align-work-baseline.tsv  commands.tsv  cross-skill.md  evidence.md  final-review.md  fixture-ledger.tsv  front-forward-coverage.tsv  inventory.tsv  preservation-limit.md  remediation-ledger.md  resource-inventory.tsv  summary.md  trigger-matrix.tsv
scripts/: install_skills.py  sync_portfolio_routing.py
skills/agent-mail/: Cargo.toml  Makefile  README.md  SKILL.md
skills/agent-mail/rust/agent-mail-server/: Cargo.toml
skills/agent-mail/rust/agent-mail-server/src/: config.rs  domain.rs  error.rs  http.rs  id.rs  main.rs  mcp.rs  store.rs  time.rs  validation.rs
skills/align-work/: SKILL.md
skills/audit-technical-work/: SKILL.md
skills/brief-linked-evidence/: SKILL.md
skills/execute-goal-loop/: SKILL.md
skills/front-agent-orchestration/: README.md  SKILL.md  go.mod
skills/maintain-project-dashboard/: SKILL.md
skills/map-technical-landscapes/: SKILL.md
skills/mine-history-tool-landscapes/: SKILL.md
skills/prioritize-important-information/: SKILL.md
tests/: hermetic_run.sh  portfolio-ambient-watches-v1.json  portfolio-routing-cases-v1.json  portfolio-routing-prompts-v1.json  portfolio-routing-rubrics-v1.json  portfolio-routing-source-map-v1.json  portfolio-routing-v1.json  portfolio_ambient.py  portfolio_receipts.py  test_installer.py  test_portfolio_bootstrap.py  test_portfolio_routing.py  test_skill_packages.py  validate_portfolio_routing.py
(+117 files in other folders)
